--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ dimensConfig {
     matchSizes=[320,360,375,384,392,400,410,411]
 }
 
-dependencies {
-    implementation project(path: ':mvvm')
-    implementation project(path: ':widget')
-}
+//dependencies {
+//    implementation project(path: ':mvvm')
+//    implementation project(path: ':widget')
+//}
