--- a/gradle.properties
+++ b/gradle.properties
@@ -22,3 +22,6 @@ android.enableJetifier=true
 kotlin.code.style=official
 gradle.publish.key=WFQ7QWG7NJqzArjO1nIB7JrFWWSCGHx8
 gradle.publish.secret=em2YRqb13Vzsggb6wBcMmJYhVyFb2jDh
+
+
+IS_JENKINS=false
