--- a/settings.gradle
+++ b/settings.gradle
@@ -1,3 +1,3 @@
-include ':app', ':mvvm',':widget'
+include ':app'
 rootProject.name='SycApp'
 apply from:"gradle/buildscript/project_setting.gradle"
