--- a/gradle.properties
+++ b/gradle.properties
@@ -20,8 +20,8 @@ android.injected.testOnly=false
 android.enableJetifier=true
 # Kotlin code style for this project: "official" or "obsolete":
 kotlin.code.style=official
-gradle.publish.key=WFQ7QWG7NJqzArjO1nIB7JrFWWSCGHx8
-gradle.publish.secret=em2YRqb13Vzsggb6wBcMmJYhVyFb2jDh
+gradle.publish.key=
+gradle.publish.secret=
 
 
 IS_JENKINS=false
