--- a/gradle/config/version.gradle
+++ b/gradle/config/version.gradle
@@ -1,11 +1,17 @@
 def versions = [:]
 versions.kotlin_version = '1.3.72'
+versions.kotlinx_coroutines = '1.1.1'
 versions.grale_plugin = '4.0.0'
 versions.appcompat = '1.1.0'
 versions.core_ktx = '1.0.2'
 versions.constraintlayout = '1.1.3'
 versions.databinding_compiler = '4.0.0'
 
+//网络
+versions.retrofit='2.9.0'
+versions.okhttp='4.7.2'
+//图片
+versions.glide='4.9.0'
 //单元测试
 versions.junit = '4.12'
 versions.android_junit = '1.1.1'
@@ -19,11 +25,22 @@ pluginDeps.kotlin = "org.jetbrains.kotlin:kotlin-gradle-plugin:$versions.kotlin_
 ext.pluginDeps = pluginDeps
 
 def deps = [:]
+//kotlin
 deps.kotlin_stdlib_jdk7 = "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$versions.kotlin_version"
-deps.appcompat = "androidx.appcompat:appcompat:$versions.appcompat"
 deps.core_ktx = "androidx.core:core-ktx:$versions.core_ktx"
+deps.kotlinx_coroutines = "org.jetbrains.kotlinx:kotlinx-coroutines-android:$versions.kotlinx_coroutines"
+//android
+deps.appcompat = "androidx.appcompat:appcompat:$versions.appcompat"
 deps.constraintlayout = "androidx.constraintlayout:constraintlayout:$versions.constraintlayout"
 deps.databinding_compiler = "androidx.databinding:databinding-compiler:$versions.databinding_compiler"
+//网络
+deps.retrofit="com.squareup.retrofit2:retrofit:$versions.retrofit"
+deps.okhttp="com.squareup.okhttp3:okhttp:$versions.okhttp"
+deps.converter_gson="com.squareup.retrofit2:converter-gson:$versions.retrofit"
+//图片
+deps.glide="com.github.bumptech.glide:glide:$versions.glide"
+deps.glide_compiler="com.github.bumptech.glide:compiler:$versions.glide"
+//单元测试
 deps.junit = "junit:junit:$versions.junit"
 deps.android_junit = "androidx.test.ext:junit:$versions.android_junit"
 deps.espresso_core = "androidx.test.espresso:espresso-core:$versions.espresso_core"
