--- a/widget/src/simple/AndroidManifest.xml
+++ b/widget/src/simple/AndroidManifest.xml
@@ -11,7 +11,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         tools:ignore="GoogleAppIndexingWarning">
-        <activity android:name="com.mvvm.simple.MainActivity">
+        <activity android:name="com.net.simple.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <action android:name="com.tal.simple.MainActivity" />
