--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'com.android.application'
+apply plugin: 'com.syc.plugin.aop'
 apply(pluginsAction)
 
 ext.urls = [
@@ -10,6 +11,8 @@ android {
     compileSdkVersion build_versions['build_sdk']
     buildToolsVersion build_versions['build_tools_version']
     defaultConfig {
+
+
         applicationId build_versions['applicationId']
         minSdkVersion build_versions['min_sdk']
         targetSdkVersion build_versions['target_sdk']
@@ -86,4 +89,12 @@ dependencies {
 dimensConfig {
     baseSize = 375
     matchSizes = [320, 360, 375, 384, 392, 400, 410, 411]
+}
+
+project.afterEvaluate {
+    if (project.plugins.hasPlugin("com.android.application")) {
+        def android = project.extensions.getByName("android")
+        android.applicationVariants.all {
+        }
+    }
 }
