--- a/build.gradle
+++ b/build.gradle
@@ -1,15 +1,20 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    apply from:'./gradle/config/version.gradle'
+    apply from: './gradle/config/version.gradle'
+    ext {
+        kotlin_version = '1.3.72'
+    }
     repositories {
-        repositories {
-            addRepos(getRepositories())
+        maven {
+            url '/Users/liguiting/Documents/androidstudio_workplace/SycApp/aop_plugin/repo'
         }
+        addRepos(getRepositories())
     }
     dependencies {
         classpath pluginDeps['gradle']
         classpath pluginDeps['kotlin']
+        classpath 'com.syc.plugin.aop:aop_plugin:1.2.1'
         classpath 'com.syc.plugin:resource:0.0.1'
         classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.8.4'
         classpath 'com.github.dcendents:android-maven-gradle-plugin:1.4.1'
