--- a/settings.gradle
+++ b/settings.gradle
@@ -1,4 +1,5 @@
-include ':aop_plugin'
-include ':app',':common'
+include ':track'
 rootProject.name='SycApp'
+include ':aop_plugin'
+include ':app',':common',':router'
 apply from:"gradle/buildscript/project_setting.gradle"
