--- a/build.gradle
+++ b/build.gradle
@@ -7,4 +7,6 @@ plugins {
     id 'com.android.library' version '8.0.0' apply false
     id 'org.jetbrains.kotlin.android' version '1.8.0' apply false
     id 'org.jetbrains.kotlin.jvm' version '1.8.0' apply false
+    id 'io.github.zcys12173.ScreenMatch' version '1.0.1' apply false
+    id 'io.github.zcys12173.plugin_router' version '1.0.0-pre' apply false
 }
