--- a/build-script/build_config.gradle
+++ b/build-script/build_config.gradle
@@ -1,3 +1,22 @@
-ext{
+ext {
     APPLICATION_ID = 'com.syc.mvvm.app'
+
+    MIN_SDK_VERSION = 23
+
+    TARGET_SDK_VERSION = 33
+
+    COMPILE_SDK_VERSION = 33
 }
+
+
+def lifecycle_version = "2.5.1"
+
+ext.libs = [
+        'core-ktx'        : 'androidx.core:core-ktx:1.10.1',
+        'appcompat'       : 'androidx.appcompat:appcompat:1.6.1',
+        'material'        : 'com.google.android.material:material:1.9.0',
+        'constraintlayout': 'androidx.constraintlayout:constraintlayout:2.1.4',
+        'KRouter'         : 'io.github.zcys12173:KRouter:1.0.0-pre',
+        'viewmodel-ktx'   : "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version"
+]
+
