组件化插件开发完成（每个Module可独立运行）

--- a/buildSrc/build.gradle
+++ b/buildSrc/build.gradle
@@ -19,9 +19,15 @@ dependencies {
 
 gradlePlugin {
     plugins {
-        helloPlugin {
-            id  = 'project-plugin'
+
+        applicationPlugin {
+            id  = 'application-plugin'
             implementationClass = 'com.syc.mvvm.ApplicationPlugin'
+        }
+
+        libraryPlugin {
+            id  = 'library-plugin'
+            implementationClass = 'com.syc.mvvm.LibraryPlugin'
         }
     }
 }
