--- a/module-user/build.gradle
+++ b/module-user/build.gradle
@@ -1,6 +1,5 @@
 plugins {
-    id 'com.android.library'
-    id 'project-plugin'
+    id 'library-plugin'
 }
 android {
     namespace 'com.syc.mvvm.user'
