--- a/buildSrc/build.gradle
+++ b/buildSrc/build.gradle
@@ -14,6 +14,8 @@ repositories {
 dependencies {
 //    implementation "org.jetbrains.kotlin:kotlin-gradle-plugin:1.8.0"
     implementation "com.android.tools.build:gradle-api:8.0.0"
+//    compileOnly "com.android.tools.build:manifest-merger:31.0.0"
+//    compileOnly "com.android.tools:common:31.0.0"
     implementation gradleApi()
 }
 
