--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "business-tiktok"]
 	path = ../business-tiktok
 	url = https://gitee.com/zcys12173/business-tiktok
+[submodule "business-login"]
+	path = ../business-login
+	url = https://gitee.com/zcys12173/business-login.git
