--- a/gradle.properties
+++ b/gradle.properties
@@ -21,6 +21,12 @@ kotlin.code.style=official
 # resources declared in the library itself and none from the library's dependencies,
 # thereby reducing the size of the R class for that library
 android.nonTransitiveRClass=true
+org.gradle.caching=true
+#配置并行编译
+org.gradle.parallel=true
+org.gradle.workers.max=4
+#配置命令行java版本
+org.gradle.java.home=/Applications/Android\ Studio.app/Contents/jbr/Contents/Home
 
 VERSION_NAME=1.0.0
 VERSION_CODE=1
