关闭自定义缓存

--- a/build-script/build_cache.gradle
+++ b/build-script/build_cache.gradle
@@ -4,10 +4,10 @@ buildCache{
     local {
         directory = new File(rootDir, "build-cache")
     }
-    remote(AppBuildCache) {
-        enabled = true
-        push = true
-    }
+//    remote(AppBuildCache) {
+//        enabled = true
+//        push = true
+//    }
 }
 class AppBuildCache extends AbstractBuildCache{
 
