--- a/build-script/build_config.gradle
+++ b/build-script/build_config.gradle
@@ -28,5 +28,7 @@ ext.libs = [
         'coil'            : "io.coil-kt:coil:$coil_version",
         'coil-svg'        : "io.coil-kt:coil-svg:$coil_version",
         'coil-gif'        : "io.coil-kt:coil-gif:$coil_version",
+        //存储
+        'mmkv'            : "com.tencent:mmkv:1.3.0",
 ]
 
