--- a/build-script/build_config.gradle
+++ b/build-script/build_config.gradle
@@ -1,3 +1,4 @@
+//android配置信息
 ext {
     APPLICATION_ID = 'com.syc.mvvm.app'
 
@@ -7,8 +8,11 @@ ext {
 
     COMPILE_SDK_VERSION = 33
 }
+//Gradle插件依赖
+ext.agp_version = '8.0.0'
+ext.kotlin_version = '1.8.0'
 
-
+//项目依赖库
 def lifecycle_version = "2.5.1"
 def okhttp_version = "4.11.0"
 def coil_version = '2.4.0'
