--- a/build-script/android_module_build.gradle
+++ b/build-script/android_module_build.gradle
@@ -21,6 +21,7 @@ android {
     }
     kotlinOptions {
         jvmTarget = '17'
+        languageVersion = '2.0'
     }
     dataBinding {
         enabled = true
