--- a/feature-framework/build.gradle
+++ b/feature-framework/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     id 'library-plugin'
+    id 'io.github.zcys12173.ScreenMatch'
 }
 
 android {
@@ -16,4 +17,13 @@ dependencies {
     api libs['viewmodel-ktx']
     api libs['gson']
     implementation libs['mmkv']
+}
+
+screenMatch {
+    baseValue = 360  //基准值，一般使用UI设计稿上的宽度dp
+    //要适配的尺寸dp
+    matchSizes = [240, 320, 360, 375, 384, 392, 400, 410, 411, 432, 480, 533, 592, 600, 640, 662, 720, 768, 800, 811, 820, 960, 961, 1024, 1024, 1280, 1365]
+
+    autoRunWithPacking = true
+    logEnabled = true
 }
