修改依赖配置方式

--- a/feature-framework/build.gradle
+++ b/feature-framework/build.gradle
@@ -9,14 +9,14 @@ android {
 }
 
 dependencies {
-    api libs['core-ktx']
-    api libs['appcompat']
-    api libs['material']
-    api libs['constraintlayout']
-    api libs['KRouter']
-    api libs['viewmodel-ktx']
-    api libs['gson']
-    implementation libs['mmkv']
+    api libs.androidx.core.ktx
+    api libs.androidx.appcompat
+    api libs.material
+    api libs.constraintlayout
+    api libs.krouter
+    api libs.viewmodel.ktx
+    api libs.gson
+    implementation libs.tencent.mmkv
 }
 
 screenMatch {
