--- a/build.gradle
+++ b/build.gradle
@@ -3,11 +3,10 @@ buildscript {
 }
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 plugins {
-    id 'com.android.application' version "$agp_version" apply false
-    id 'com.android.library' version "$agp_version" apply false
-    id 'org.jetbrains.kotlin.android' version "$kotlin_version" apply false
-    id 'org.jetbrains.kotlin.jvm' version "$kotlin_version" apply false
-    id 'org.jetbrains.kotlin.kapt' version "$kotlin_version" apply false
-    id 'io.github.zcys12173.ScreenMatch' version '1.0.2' apply false
-    id 'io.github.zcys12173.plugin_router' version '1.0.0-pre' apply false
+    alias libs.plugins.android.application apply false
+    alias libs.plugins.android.library apply false
+    alias libs.plugins.kotlin.android apply false
+    alias libs.plugins.kotlin.kapt apply false
+    alias libs.plugins.screenMatch apply false
+    alias libs.plugins.routerPlugin apply false
 }
