--- a/feature-image/build.gradle
+++ b/feature-image/build.gradle
@@ -7,7 +7,7 @@ android {
 }
 
 dependencies {
-    implementation libs['coil']
-    implementation libs['coil-svg']
-    implementation libs['coil-gif']
+    implementation libs.coil
+    implementation libs.coil.svg
+    implementation libs.coil.gif
 }
