--- a/feature-network/build.gradle
+++ b/feature-network/build.gradle
@@ -7,7 +7,7 @@ android {
 }
 
 dependencies {
-    implementation libs['okhttp']
-    api libs['retrofit']
-    api libs['okhttp-logging']
+    implementation libs.okhttp
+    api libs.retrofit
+    api libs.okhttp.logging
 }
