--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -3,6 +3,7 @@ androidGradlePlugin = "8.0.0"
 kotlin = "1.8.20"
 screenMatchPlugin = "1.0.2"
 routerPlugin = "1.0.0-pre"
+kotlinKspPlugin = "1.8.20-1.0.10"
 
 androidXCore = "1.10.1"
 androidxAppCompat = "1.6.1"
@@ -38,5 +39,6 @@ android-library = { id = "com.android.library", version.ref = "androidGradlePlug
 kotlin-jvm = { id = "org.jetbrains.kotlin.jvm", version.ref = "kotlin" }
 kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
 kotlin-kapt = { id = "org.jetbrains.kotlin.kapt", version.ref = "kotlin" }
+kotlin-ksp = { id = "com.google.devtools.ksp", version.ref = "kotlinKspPlugin" }
 screenMatch = { id = "io.github.zcys12173.ScreenMatch", version.ref = "screenMatchPlugin" }
 routerPlugin = { id = "io.github.zcys12173.plugin_router", version.ref = "routerPlugin" }
