--- a/build.gradle
+++ b/build.gradle
@@ -6,8 +6,8 @@ plugins {
     alias libs.plugins.android.application apply false
     alias libs.plugins.android.library apply false
     alias libs.plugins.kotlin.android apply false
-//    alias libs.plugins.kotlin.kapt apply false
-    alias libs.plugins.kotlin.ksp apply false
+    alias libs.plugins.kotlin.kapt apply false
+//    alias libs.plugins.kotlin.ksp apply false
     alias libs.plugins.screenMatch apply false
     alias libs.plugins.routerPlugin apply false
 }
