--- a/gradle.properties
+++ b/gradle.properties
@@ -23,6 +23,8 @@ kotlin.code.style=official
 android.nonTransitiveRClass=true
 #开启Kotlin 跨模块增量编译
 kotlin.incremental.useClasspathSnapshot=true
+#开启Kotlin K2编译器
+kotlin.experimental.tryK2=true
 org.gradle.caching=true
 org.gradle.configuration-cache=true
 android.defaults.buildfeatures.buildconfig=true
