build-logic 模块添加kotlin标准库依赖

--- a/build-logic/convention/build.gradle
+++ b/build-logic/convention/build.gradle
@@ -10,6 +10,7 @@ dependencies {
     compileOnly libs.android.tool.mergeManifest
     compileOnly libs.android.tool.common
     compileOnly libs.kotlin.gradlePlugin
+    compileOnly libs.kotlin.stdlib
 }
 
 gradlePlugin {
