--- a/build-script/android_module_build.gradle
+++ b/build-script/android_module_build.gradle
@@ -21,7 +21,7 @@ android {
 }
 
 dependencies {
-    testImplementation 'junit:junit:4.13.2'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.5'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
+    testImplementation libs.test.junit
+    androidTestImplementation libs.test.androidJunit
+    androidTestImplementation libs.test.espressoCore
 }
