--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -17,6 +17,9 @@ retrofit = "2.9.0"
 coil="2.4.0"
 krouter="1.0.0-pre"
 mmkv = "1.3.0"
+junit = "4.13.2"
+androidxJunit = "1.1.5"
+espresso-core = "3.5.1"
 
 [libraries]
 tencent-mmkv = { group = "com.tencent", name = "mmkv", version.ref = "mmkv" }
@@ -39,6 +42,10 @@ android-gradlePlugin = { group = "com.android.tools.build", name = "gradle", ver
 kotlin-gradlePlugin = { group = "org.jetbrains.kotlin", name = "kotlin-gradle-plugin", version.ref = "kotlin" }
 android-tool-mergeManifest = { group = "com.android.tools.build", name = "manifest-merger", version.ref = "androidTools" }
 android-tool-common = { group = "com.android.tools", name = "common", version.ref = "androidTools" }
+
+test-junit = { group = "junit", name = "junit", version.ref = "junit" }
+test-androidJunit = { group = "androidx.test.ext", name = "junit", version.ref = "androidxJunit" }
+test-espressoCore = { group = "androidx.test.espresso", name = "espresso-core", version.ref = "espresso-core" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "androidGradlePlugin" }
