--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,6 +4,15 @@ plugins {
 
 android {
     namespace 'com.syc.mvvm.app'
+    buildTypes {
+
+        benchmark {
+            initWith release
+            signingConfig signingConfigs.debug
+            matchingFallbacks = ['release']
+            debuggable false
+        }
+    }
 }
 
 
