--- a/build-script/android_module_build.gradle
+++ b/build-script/android_module_build.gradle
@@ -7,11 +7,21 @@ android {
         versionName VERSION_NAME
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
+    signingConfigs {
+        release {
+            storeFile file('/Users/shiyucheng/Documents/workspace/android_workspace/SycApp/syc.keystore')
+            storePassword '123456'
+            keyAlias 'key0'
+            keyPassword '123456'
+        }
+    }
 
     buildTypes {
         release {
+            signingConfig signingConfigs.release
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+            matchingFallbacks = ["benchmark"]
         }
     }
 
