--- a/build.gradle
+++ b/build.gradle
@@ -7,6 +7,7 @@ plugins {
 //    alias libs.plugins.kotlin.ksp apply false
     alias libs.plugins.screenMatch apply false
     alias libs.plugins.routerPlugin apply false
+    alias libs.plugins.com.android.test apply false
 }
 
 allprojects {
