--- a/settings.gradle
+++ b/settings.gradle
@@ -68,3 +68,5 @@ include ':core:storage'
 include ':feature:common'
 include ':feature:tiktok'
 include ':feature:login'
+
+include ':test:macrobenchmark'
