增加可视化埋点框架

--- a/build-logic/convention/build.gradle
+++ b/build-logic/convention/build.gradle
@@ -11,6 +11,7 @@ dependencies {
     compileOnly libs.android.tool.common
     compileOnly libs.kotlin.gradlePlugin
     compileOnly libs.kotlin.stdlib
+    compileOnly libs.asm.common
 }
 
 gradlePlugin {
